--- a/article.html
+++ b/article.html
@@ -37,111 +37,12 @@
                     <li><a href="#Quiz">Quiz</a></li>
                 </ul>
             </nav>
+
+            
             
             <div id="content">
-                <h2 id="Fonts">Fonts</h2>
-                <p class="article_text">
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
-                    In sollicitudin nec lacus aliquam varius. Aenean libero sapien,
-                    tempor non lacinia eget, consectetur eu lorem. In volutpat tempor 
-                    purus tempus rhoncus. <span>Nulla</span> a cursus nisi. Mauris non diam nec magna 
-                    pretium posuere eget ac libero. Nam volutpat dolor vitae bibendum porttitor. 
-                    Pellentesque et orci porta, tincidunt felis vitae, lacinia velit. Vestibulum in tincidunt orci. 
-                    Aliquam arcu quam, facilisis in odio nec, venenatis porta enim. Integer nisi mauris, vehicula 
-                    ac venenatis sit amet, vestibulum sit amet est. Quisque lobortis viverra placerat.
-                </p>
+                <section id="articleList"></section>
 
-                <h3 id="Sizes">Sizes</h3>
-                <p class="article_text">
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
-                    In sollicitudin nec lacus aliquam varius. Aenean libero sapien,
-                    tempor non lacinia eget, consectetur eu lorem. In volutpat tempor 
-                    purus tempus rhoncus. <span>Nulla</span> a cursus nisi. Mauris non diam nec magna 
-                    pretium posuere eget ac libero. Nam volutpat dolor vitae bibendum porttitor. 
-                    Pellentesque et orci porta, tincidunt felis vitae, lacinia velit. Vestibulum in tincidunt orci. 
-                    Aliquam arcu quam, facilisis in odio nec, venenatis porta enim. Integer nisi mauris, vehicula 
-                    ac venenatis sit amet, vestibulum sit amet est. Quisque lobortis viverra placerat.
-                </p>
-
-                <h3 id="Families">Families</h3>
-                <p class="article_text">
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
-                    In sollicitudin nec lacus aliquam varius. Aenean libero sapien,
-                    tempor non lacinia eget, consectetur eu lorem. In volutpat tempor 
-                    purus tempus rhoncus. <span>Nulla</span> a cursus nisi. Mauris non diam nec magna 
-                    pretium posuere eget ac libero. Nam volutpat dolor vitae bibendum porttitor. 
-                    Pellentesque et orci porta, tincidunt felis vitae, lacinia velit. Vestibulum in tincidunt orci. 
-                    Aliquam arcu quam, facilisis in odio nec, venenatis porta enim. Integer nisi mauris, vehicula 
-                    ac venenatis sit amet, vestibulum sit amet est. Quisque lobortis viverra placerat.
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
-                    In sollicitudin nec lacus aliquam varius. Aenean libero sapien,
-                    tempor non lacinia eget, consectetur eu lorem. In volutpat tempor 
-                    purus tempus rhoncus. <span>Nulla</span> a cursus nisi. Mauris non diam nec magna 
-                    pretium posuere eget ac libero. Nam volutpat dolor vitae bibendum porttitor. 
-                    Pellentesque et orci porta, tincidunt felis vitae, lacinia velit. Vestibulum in tincidunt orci. 
-                    Aliquam arcu quam, facilisis in odio nec, venenatis porta enim. Integer nisi mauris, vehicula 
-                    ac venenatis sit amet, vestibulum sit amet est. Quisque lobortis viverra placerat.
-                </p>
-
-                <h3 id="Ref">References</h3>
-                <p class="article_text">
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
-                    In sollicitudin nec lacus aliquam varius. Aenean libero sapien,
-                    tempor non lacinia eget, consectetur eu lorem. In volutpat tempor 
-                    purus tempus rhoncus. <span>Nulla</span> a cursus nisi. Mauris non diam nec magna 
-                    pretium posuere eget ac libero. Nam volutpat dolor vitae bibendum porttitor. 
-                    Pellentesque et orci porta, tincidunt felis vitae, lacinia velit. Vestibulum in tincidunt orci. 
-                    Aliquam arcu quam, facilisis in odio nec, venenatis porta enim. Integer nisi mauris, vehicula 
-                    ac venenatis sit amet, vestibulum sit amet est. Quisque lobortis viverra placerat.
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
-                    In sollicitudin nec lacus aliquam varius. Aenean libero sapien,
-                    tempor non lacinia eget, consectetur eu lorem. In volutpat tempor 
-                    purus tempus rhoncus. <span>Nulla</span> a cursus nisi. Mauris non diam nec magna 
-                    pretium posuere eget ac libero. Nam volutpat dolor vitae bibendum porttitor. 
-                    Pellentesque et orci porta, tincidunt felis vitae, lacinia velit. Vestibulum in tincidunt orci. 
-                    Aliquam arcu quam, facilisis in odio nec, venenatis porta enim. Integer nisi mauris, vehicula 
-                    ac venenatis sit amet, vestibulum sit amet est. Quisque lobortis viverra placerat.
-                </p>
-
-                <h3 id="Vocab">Vocab</h3>
-                <p class="article_text">
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
-                    In sollicitudin nec lacus aliquam varius. Aenean libero sapien,
-                    tempor non lacinia eget, consectetur eu lorem. In volutpat tempor 
-                    purus tempus rhoncus. <span>Nulla</span> a cursus nisi. Mauris non diam nec magna 
-                    pretium posuere eget ac libero. Nam volutpat dolor vitae bibendum porttitor. 
-                    Pellentesque et orci porta, tincidunt felis vitae, lacinia velit. Vestibulum in tincidunt orci. 
-                    Aliquam arcu quam, facilisis in odio nec, venenatis porta enim. Integer nisi mauris, vehicula 
-                    ac venenatis sit amet, vestibulum sit amet est. Quisque lobortis viverra placerat.
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
-                    In sollicitudin nec lacus aliquam varius. Aenean libero sapien,
-                    tempor non lacinia eget, consectetur eu lorem. In volutpat tempor 
-                    purus tempus rhoncus. <span>Nulla</span> a cursus nisi. Mauris non diam nec magna 
-                    pretium posuere eget ac libero. Nam volutpat dolor vitae bibendum porttitor. 
-                    Pellentesque et orci porta, tincidunt felis vitae, lacinia velit. Vestibulum in tincidunt orci. 
-                    Aliquam arcu quam, facilisis in odio nec, venenatis porta enim. Integer nisi mauris, vehicula 
-                    ac venenatis sit amet, vestibulum sit amet est. Quisque lobortis viverra placerat.
-                </p>
-
-                <h3 id="Quiz">Quiz</h3>
-                <p class="article_text">
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
-                    In sollicitudin nec lacus aliquam varius. Aenean libero sapien,
-                    tempor non lacinia eget, consectetur eu lorem. In volutpat tempor 
-                    purus tempus rhoncus. <span>Nulla</span> a cursus nisi. Mauris non diam nec magna 
-                    pretium posuere eget ac libero. Nam volutpat dolor vitae bibendum porttitor. 
-                    Pellentesque et orci porta, tincidunt felis vitae, lacinia velit. Vestibulum in tincidunt orci. 
-                    Aliquam arcu quam, facilisis in odio nec, venenatis porta enim. Integer nisi mauris, vehicula 
-                    ac venenatis sit amet, vestibulum sit amet est. Quisque lobortis viverra placerat.
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
-                    In sollicitudin nec lacus aliquam varius. Aenean libero sapien,
-                    tempor non lacinia eget, consectetur eu lorem. In volutpat tempor 
-                    purus tempus rhoncus. <span>Nulla</span> a cursus nisi. Mauris non diam nec magna 
-                    pretium posuere eget ac libero. Nam volutpat dolor vitae bibendum porttitor. 
-                    Pellentesque et orci porta, tincidunt felis vitae, lacinia velit. Vestibulum in tincidunt orci. 
-                    Aliquam arcu quam, facilisis in odio nec, venenatis porta enim. Integer nisi mauris, vehicula 
-                    ac venenatis sit amet, vestibulum sit amet est. Quisque lobortis viverra placerat.
-                </p>
 
             </div>
             <div id="access-btns">
@@ -160,6 +61,6 @@
                 </select>
             </div>
         </main>
-        <script src="article.js"></script>
+        <script src="articleGenerator.js"></script>
     </body>
 </html>
