--- a/article.html
+++ b/article.html
@@ -3,6 +3,11 @@
     <head>
         <title> Article Mockup </title>
         <link rel="stylesheet" href="article.css" />
+        <!--FONT-->
+        <link href="http://fonts.cdnfonts.com/css/niramit" rel="stylesheet">
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap" rel="stylesheet">
     </head>
     <body>
         <header>
@@ -14,10 +19,10 @@
                     <option class="top_nav_bar_text" value="Visual Acessibility">Visual Acessibility</option>
                 </select>
                 <li><a href="#">Home</a></li>
-                <li><a href="#">Acessibility Basics</a></li>
-                <li><a href="#">Visual Accessibility</a></li>
-                <li><a href="#">Audio Accessibility</a></li>
-                <li><a href="#">Motor Accessibility</a></li>
+                <li><a href="#" id="basics">Acessibility Basics</a></li>
+                <li><a href="#" id="visual">Visual Accessibility</a></li>
+                <li><a href="#" id="audio">Audio Accessibility</a></li>
+                <li><a href="#" id="motor">Motor Accessibility</a></li>
                 <button class="mode_button_text" id="color-toggle-btn">Dark Mode</button>
             </nav>
         </header>
@@ -42,8 +47,6 @@
             
             <div id="content">
                 <section id="articleList"></section>
-
-
             </div>
             <div id="access-btns">
                 <button id="text-to-speech-btn"><img src="imgs/text-to-speech.png" alt="text to speech button"></button>
