--- a/basics.html
+++ b/basics.html
@@ -74,21 +74,21 @@
                     <h2 id="Visual">Fonts</h2>
                     <p > 
                         Vision impairment means that a person's eyesight cannot be corrected to a “normal” level. Vision impairment may be caused by a loss of visual acuity, where the eye does not see objects as clearly as usual.
-                        <span>Nulla</span> As you can imagine, blind users do not see the contents of a webpage like sighted users do. Instead they rely on screen readers to read out the content and generally rely on them to navigate the web.
-                        <span>Nulla</span> It is important to to Provide sufficient contrast using colors and textures,Limit and prioritize color in the interface and Allow manual font size adjustment.By making your website accessible, you are ensuring that all of your potential users, including people with disabilities, have a decent user experience and are able to easily access your information.
+                         As you can imagine, blind users do not see the contents of a webpage like sighted users do. Instead they rely on screen readers to read out the content and generally rely on them to navigate the web.
+                         It is important to to Provide sufficient contrast using colors and textures,Limit and prioritize color in the interface and Allow manual font size adjustment.By making your website accessible, you are ensuring that all of your potential users, including people with disabilities, have a decent user experience and are able to easily access your information.
                     </p>
     
                     <h3 id="Motor Disability">Sizes</h3>
                     <p>
-                        Physical impairments that can impede movement, coordination, or sensation. They can include weakness and lack of muscle control. <span>Nulla</span>
-                        Make sure that all functions are accessible and easy to use via the keyboard. This is a strong recommendation to be implemented because many assistive devices used by individuals require interaction with the keyboard. <span>Nulla</span>
+                        Physical impairments that can impede movement, coordination, or sensation. They can include weakness and lack of muscle control. 
+                        Make sure that all functions are accessible and easy to use via the keyboard. This is a strong recommendation to be implemented because many assistive devices used by individuals require interaction with the keyboard. 
                         It is also important to have error identification/focus. Sometimes, not just the mouse is hard to control, but the keyboard, too. For this reason, it is s recommended that your websites forms be designed tolerant of errors (e.g., submission errors or data entry errors).
                     </p>
     
                     <h3 id="Auditory Disability">Families</h3>
                      <p>
                         Auditory processing disorder (APD) is a hearing problem.People with auditory processing disorder (APD) have a hard time hearing small sound differences in words
-                        ​​Hearing aids, cochlear implants, and/or other devices, usually on the person, rather than on the computer. <span>Nulla</span> Provide text transcripts of audio content. Provide captions synchronized with video content.<span>Nulla</span> Provide text transcripts of audio content. Provide captions synchronized with video content. 
+                        ​​Hearing aids, cochlear implants, and/or other devices, usually on the person, rather than on the computer.  Provide text transcripts of audio content. Provide captions synchronized with video content. Provide text transcripts of audio content. Provide captions synchronized with video content. 
                     </p>    
             </div>
 
